[tool.poetry]
name = "bittensor-subnet"
version = "0.1.0"
description = "A Bittensor subnet for processing audio data and generating captions."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bittensor = "^0.1.0"
numpy = "^1.21.0"
scipy = "^1.7.0"
pydub = "^0.25.1"
torch = "^1.9.0"
transformers = "^4.11.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"