[tool.poetry]
name = "bittensor-subnet"
version = "0.1.0"
description = "A Bittensor subnet for processing audio data and generating captions."
authors = ["Mukku27 vemulapallimukesh@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
bittensor = "9.0.2"
numpy = "2.2.3"
scipy = "1.7.0"
pydub = "0.25.1"
torch = "2.3.0"
transformers = "4.11.3"
openai-whisper="20240930"
datasets="3.3.2"
jiwer="3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"